# neonatal-mlhc

./: .gitignore  LICENSE  README.md  pyproject.toml
dataloader/: load_video_data.py
roi_testing/device_roi/: convert_label.py  detect_squeeze_motion.py  device_detection.ipynb  inference_speed_analysis.py  moondream.ipynb  plot_vlm_inference.py  process_video.py  process_vlm_on_roi.py
roi_testing/torso_roi/: ChestCompressionDetection.ipynb  ExtractRandomNFramesGDrive.ipynb  chestCompressionDetector.py  torsoPoseYOLOv8.ipynb
